Address PR Comments
Signed-off-by: Andre Kurait <akurait@amazon.com>